// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Results Page considers a given search filter query param and displays category and version tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-column-gap: 46px;
  column-gap: 46px;
  display: grid;
  grid-template-areas: 'header .' 'results filters';
  grid-template-columns: auto 173px;
  margin: 32px 108px 64px 32px;
  max-width: 1150px;
  row-gap: 32px;
}

@media only screen and (max-width: 1440px) {
  .emotion-0 {
    margin: 32px 40px 64px 40px;
  }
}

@media only screen and (max-width: 767px) {
  .emotion-0 {
    -webkit-column-gap: 0;
    column-gap: 0;
    grid-template-areas: 'header' 'results';
    grid-template-columns: auto;
    margin: 32px 24px 64px 24px;
  }
}

.emotion-2 {
  grid-area: header;
}

.emotion-4 {
  color: #001E2B!important;
  font-size: 18px;
  line-height: 21px;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  letter-spacing: 0.8px;
}

.emotion-6 {
  margin-top: 8px;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 8px;
  background-color: #E3FCF7;
  border: 1px solid #C0FAE6;
  color: #00684A;
  cursor: pointer;
  height: 26px;
  font-size: 13px;
  margin-right: 8px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 8px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #1254B7;
  cursor: pointer;
  height: 26px;
  font-size: 13px;
  margin-right: 8px;
}

.emotion-12 {
  display: none;
  margin-top: 16px;
}

@media only screen and (max-width: 767px) {
  .emotion-12 {
    display: block;
  }
}

.emotion-14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
}

.emotion-14:focus {
  outline: none;
}

.emotion-14[disabled],
.emotion-14:disabled {
  pointer-events: none;
}

.emotion-14:active,
.emotion-14:focus,
.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:hover,
.emotion-14:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-14:focus {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-15 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-16 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  padding: 0 11px;
  gap: 6px;
}

.emotion-17 {
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-18 {
  box-shadow: none;
  display: grid;
  grid-area: results;
  grid-auto-rows: calc(152px + 16px);
  height: 100%;
  width: 100%;
}

.emotion-18:hover>.emotion-20 {
  opacity: 0.2;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-18:hover>.emotion-20:hover {
  opacity: 1;
}

.emotion-18:not(:hover)>.emotion-20 {
  opacity: 1;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-21 {
  color: #494747;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 24px;
  box-shadow: 0 0 4px 0 rgba(231, 238, 236, 0.4);
  background-color: #fff;
  height: 152px;
  position: relative;
  place-self: center;
  width: 100%;
}

.emotion-21:hover,
.emotion-21:focus {
  color: #494747;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21:hover .emotion-24,
.emotion-21:focus .emotion-24 {
  background-color: rgba(231, 238, 236, 0.4);
  -webkit-transition: background-color 150ms ease-in;
  transition: background-color 150ms ease-in;
}

.emotion-21>div {
  padding: 24px;
}

.emotion-21:hover,
.emotion-21:focus {
  color: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

.emotion-21:hover>div,
.emotion-21:focus>div {
  background-color: unset!important;
}

.emotion-21:before {
  content: '';
  position: absolute;
  top: calc(-16px / 2);
  left: 0;
  right: 0;
  bottom: calc(-16px / 2);
  background-color: transparent;
}

.emotion-23 {
  height: 100%;
}

.emotion-25 {
  font-family: 'Euclid Circular A';
  font-size: 13px;
  line-height: 24px;
  letter-spacing: 0.5px;
  height: 24px;
  margin-bottom: 8px;
  margin-top: 0;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  position: relative;
}

@media only screen and (max-width: 480px) {
  .emotion-25 {
    font-size: 16px;
    line-height: 24px;
    font-weight: 600;
  }
}

.emotion-27 {
  font-size: 13px;
  line-height: 20px;
  margin-bottom: 16px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  min-height: 20px;
}

.emotion-29 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
}

.emotion-29 strong,
.emotion-29 b {
  font-weight: 700;
}

.emotion-30 {
  bottom: 0;
  margin-bottom: 24px;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-36>div:first-child {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-36>div:last-child {
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-37 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-42 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #889397;
}

.emotion-42:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-42:active:before,
.emotion-42:hover:before,
.emotion-42:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-42:focus {
  outline: none;
}

.emotion-42:active,
.emotion-42:hover {
  color: #001E2B;
}

.emotion-42:active:before,
.emotion-42:hover:before {
  background-color: #E8EDEB;
}

.emotion-42:focus-visible {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-42:focus-visible:before {
  background-color: #E8EDEB;
}

.emotion-43 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-44 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-48 {
  grid-area: filters;
}

@media only screen and (max-width: 767px) {
  .emotion-48 {
    display: none;
  }
}

.emotion-50 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3D4F58;
  font-size: 12px;
  line-height: 15px;
  text-transform: uppercase;
  white-space: nowrap;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  margin-bottom: 16px;
}

.emotion-52 {
  grid-area: filters;
}

@media only screen and (max-width: 767px) {
  .emotion-52 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .emotion-52>div {
    margin-bottom: 0;
    margin-right: 8px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-52 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .emotion-52>div {
    width: 100%;
  }

  .emotion-52>div:first-of-type {
    margin-bottom: 8px;
    margin-right: 0;
  }

  .emotion-52>div>div {
    width: 100%;
  }
}

.emotion-54 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 16px;
}

.emotion-56 {
  width: 175px;
}

.emotion-58 {
  position: relative;
}

@media only screen and (max-width: 1024px) {
  .emotion-58 label,
  .emotion-58 p,
  .emotion-58 button,
  .emotion-58 div,
  .emotion-58 span {
    font-size: 13px;
  }
}

.emotion-59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-59>label+button,
.emotion-59>p+button {
  margin-top: 3px;
}

@media only screen and (max-width: 1024px) {
  .emotion-59 label,
  .emotion-59 p,
  .emotion-59 button,
  .emotion-59 div,
  .emotion-59 span {
    font-size: 13px;
  }
}

.emotion-60 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  width: 100%;
  font-size: 13px;
}

.emotion-60:focus {
  outline: none;
}

.emotion-60[disabled],
.emotion-60:disabled {
  pointer-events: none;
}

.emotion-60:active,
.emotion-60:focus,
.emotion-60:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-60:hover,
.emotion-60:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-60:focus {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-60>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-60>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-60>*:last-child>svg {
  color: #3D4F58;
}

.emotion-60>*:last-child {
  padding: 0 4px 0 12px;
}

.emotion-60:focus {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

@media only screen and (max-width: 1024px) {
  .emotion-60 {
    height: 36px;
    font-size: 16px;
  }
}

.emotion-63 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 4px;
  overflow: hidden;
}

.emotion-64 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
}

.emotion-65 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: left;
}

.emotion-72 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  width: 100%;
  font-size: 13px;
}

.emotion-72:focus {
  outline: none;
}

.emotion-72[disabled],
.emotion-72:disabled {
  pointer-events: none;
}

.emotion-72:active,
.emotion-72:focus,
.emotion-72:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-72:hover,
.emotion-72:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-72,
.emotion-72:hover {
  background-color: #E8EDEB;
  border-color: #C1C7C6;
  color: #889397;
  cursor: not-allowed;
}

.emotion-72:focus {
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-72>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-72>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-72>*:last-child>svg {
  color: #3D4F58;
}

.emotion-72>*:last-child {
  padding: 0 4px 0 12px;
}

.emotion-72:focus {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

.emotion-72:disabled {
  cursor: not-allowed;
  pointer-events: unset;
  box-shadow: unset;
}

.emotion-72:disabled:active {
  pointer-events: none;
}

.emotion-72:disabled {
  background-color: #E8EDEB;
  color: #889397;
}

.emotion-72:disabled>*:last-child>svg {
  color: #889397;
}

@media only screen and (max-width: 1024px) {
  .emotion-72 {
    height: 36px;
    font-size: 16px;
  }
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h1
        class="emotion-4 emotion-5"
      >
        Search results for "stitch"
      </h1>
      <div
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-8 emotion-9"
        >
          Realm
          <svg
            aria-label="X Icon"
            class=""
            fill="none"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.203 3.404a1 1 0 0 0-1.414 0L8.314 5.879 5.839 3.404a1 1 0 0 0-1.414 0l-.707.707a1 1 0 0 0 0 1.414L6.192 8l-2.474 2.475a1 1 0 0 0 0 1.414l.707.707a1 1 0 0 0 1.414 0l2.475-2.475 2.475 2.475a1 1 0 0 0 1.414 0l.707-.707a1 1 0 0 0 0-1.414L10.435 8l2.475-2.475a1 1 0 0 0 0-1.414l-.707-.707Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="emotion-8 emotion-11"
        >
          Latest
        </span>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <button
          aria-disabled="false"
          class="emotion-14"
          data-leafygreen-ui="button"
          type="button"
        >
          <div
            class="emotion-15"
          />
          <div
            class="emotion-16"
          >
            <svg
              alt=""
              aria-hidden="true"
              class="emotion-17"
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.203 3.404a1 1 0 0 0-1.414 0L8.314 5.879 5.839 3.404a1 1 0 0 0-1.414 0l-.707.707a1 1 0 0 0 0 1.414L6.192 8l-2.474 2.475a1 1 0 0 0 0 1.414l.707.707a1 1 0 0 0 1.414 0l2.475-2.475 2.475 2.475a1 1 0 0 0 1.414 0l.707-.707a1 1 0 0 0 0-1.414L10.435 8l2.475-2.475a1 1 0 0 0 0-1.414l-.707-.707Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            Clear all filters
          </div>
        </button>
      </div>
    </div>
    <div
      class="emotion-18 emotion-19"
    >
      <a
        class="emotion-20 emotion-21 emotion-22"
        href="stitch.withfilters"
      >
        <div
          class="emotion-23 emotion-24"
        >
          <p
            class="emotion-25 emotion-26"
          >
            <span
              style="background-color:#FFEC9E"
            >
              stitch
            </span>
             (realm filter)
          </p>
          <p
            class="emotion-27 emotion-28 emotion-29"
            maxlines="2"
          >
            <span
              style="background-color:#FFEC9E"
            >
              Stitch
            </span>
             preview (with realm filter)
          </p>
          <div
            class="emotion-30 emotion-31"
          >
            <span
              class="emotion-32 emotion-9"
            >
              Realm
            </span>
            <span
              class="emotion-32 emotion-11"
            >
              Latest
            </span>
          </div>
        </div>
      </a>
      <div
        class="emotion-36"
      >
        <div
          class="emotion-37"
        />
        <div
          class="emotion-37"
        >
          <p
            class="emotion-29"
            data-testid="lg-pagination-item-range"
          >
            NaN - NaN of many
          </p>
        </div>
        <div
          class="emotion-37"
        >
          <p
            class="emotion-29"
            data-testid="lg-pagination-page-range"
          >
            NaN of many
          </p>
          <button
            aria-disabled="false"
            aria-label="Previous page"
            class="emotion-42"
            data-testid="lg-pagination-back-button"
            tabindex="0"
          >
            <div
              class="emotion-43"
            >
              <svg
                aria-label="Chevron Left Icon"
                class="emotion-44"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.7782 1.63604C10.3877 1.24551 9.75449 1.24551 9.36396 1.63604L4.41421 6.58579L3.70711 7.29289C3.31658 7.68342 3.31658 8.31658 3.70711 8.70711L4.41421 9.41421L9.36396 14.364C9.75448 14.7545 10.3876 14.7545 10.7782 14.364L11.4853 13.6569C11.8758 13.2663 11.8758 12.6332 11.4853 12.2426L7.24264 8L11.4853 3.75736C11.8758 3.36684 11.8758 2.73367 11.4853 2.34315L10.7782 1.63604Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-label="Next page"
            class="emotion-42"
            data-testid="lg-pagination-next-button"
            tabindex="0"
          >
            <div
              class="emotion-43"
            >
              <svg
                aria-label="Chevron Right Icon"
                class="emotion-44"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.36396 14.364C5.75449 14.7545 6.38765 14.7545 6.77818 14.364L11.7279 9.41421L12.435 8.70711C12.8256 8.31658 12.8256 7.68342 12.435 7.29289L11.7279 6.58579L6.77817 1.63604C6.38765 1.24552 5.75449 1.24551 5.36396 1.63604L4.65685 2.34315C4.26633 2.73367 4.26633 3.36684 4.65685 3.75736L8.89949 8L4.65685 12.2426C4.26633 12.6332 4.26633 13.2663 4.65686 13.6569L5.36396 14.364Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
       
    </div>
    <div
      class="emotion-48 emotion-49"
    >
      <h2
        class="emotion-50 emotion-51"
      >
        Specify your search
      </h2>
      <div
        class="emotion-52 emotion-53"
      >
        <div
          class="emotion-54 emotion-55"
        >
          <div
            class="emotion-56 emotion-57 emotion-58"
          >
            <div
              class="emotion-59"
            >
              <button
                aria-controls="select-33-menu"
                aria-describedby="select-33-description"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                aria-labelledby="select"
                class="emotion-60"
                data-leafygreen-ui="button"
                data-testid="lg-select"
                id="select-34"
                type="button"
                value="Realm"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <div
                    class="emotion-63"
                  >
                    <div
                      class="emotion-64"
                    >
                      Realm
                    </div>
                  </div>
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-65"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="emotion-54 emotion-55"
        >
          <div
            class="emotion-56 emotion-57 emotion-58"
          >
            <div
              class="emotion-59"
            >
              <button
                aria-controls="select-35-menu"
                aria-describedby="select-35-description"
                aria-disabled="true"
                aria-expanded="false"
                aria-invalid="false"
                aria-labelledby="select"
                class="emotion-72"
                data-leafygreen-ui="button"
                data-testid="lg-select"
                disabled=""
                id="select-36"
                type="button"
                value="Latest"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <div
                    class="emotion-63"
                  >
                    <div
                      class="emotion-64"
                    >
                      Latest
                    </div>
                  </div>
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-65"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="emotion-14"
          data-leafygreen-ui="button"
          type="button"
        >
          <div
            class="emotion-15"
          />
          <div
            class="emotion-16"
          >
            <svg
              alt=""
              aria-hidden="true"
              class="emotion-17"
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.203 3.404a1 1 0 0 0-1.414 0L8.314 5.879 5.839 3.404a1 1 0 0 0-1.414 0l-.707.707a1 1 0 0 0 0 1.414L6.192 8l-2.474 2.475a1 1 0 0 0 0 1.414l.707.707a1 1 0 0 0 1.414 0l2.475-2.475 2.475 2.475a1 1 0 0 0 1.414 0l.707-.707a1 1 0 0 0 0-1.414L10.435 8l2.475-2.475a1 1 0 0 0 0-1.414l-.707-.707Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            Clear all filters
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search Results Page renders correctly without browser 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: calc(50vh - 28px - 40px - 166px / 2);
  margin-top: calc(50vh - 28px - 40px - 166px / 2);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: 'Euclid Circular A';
  letter-spacing: 0.5px;
  margin: 0 auto;
  max-width: 337px;
  text-align: center;
}

.emotion-4 {
  height: calc(40px + 16px);
  width: calc(40px + 16px);
}

.emotion-4 span {
  height: 40px;
  width: 40px;
}

.emotion-6 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  color: #89979B;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
}

.emotion-6:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-6:active:before,
.emotion-6:hover:before,
.emotion-6:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:active,
.emotion-6:hover {
  color: #3D4F58;
}

.emotion-6:active:before,
.emotion-6:hover:before {
  background-color: #E7EEEC;
}

.emotion-6:focus {
  color: #1A567E;
}

.emotion-6:focus:before {
  background-color: #C5E4F2;
}

.emotion-7 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  color: #001E2B;
  height: 40px;
  width: 40px;
}

.emotion-10 {
  color: #001E2B;
  font-size: 18px;
  line-height: 21px;
  margin-bottom: 16px;
}

.emotion-12 {
  font-size: 16px;
  line-height: 24px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <button
        aria-disabled="false"
        aria-label="Search MongoDB Documentation"
        class="emotion-4 emotion-5 emotion-6"
        tabindex="0"
      >
        <div
          class="emotion-7"
        >
          <svg
            aria-label="Magnifying Glass Icon"
            class="emotion-8 emotion-9"
            fill="none"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M2.323 9.819a5.302 5.302 0 0 0 6.463.805l4.144 4.144a1.3 1.3 0 1 0 1.838-1.838l-4.144-4.144a5.302 5.302 0 0 0-8.3-6.463 5.3 5.3 0 0 0 0 7.496ZM7.98 4.162A2.7 2.7 0 1 1 4.162 7.98 2.7 2.7 0 0 1 7.98 4.162Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
      <h3
        class="emotion-10 emotion-11"
      >
        <strong>
          Search MongoDB Documentation
        </strong>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        Find guides, examples, and best practices for working with the MongoDB data platform.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search Results Page renders loading images before returning no results 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-column-gap: 46px;
  column-gap: 46px;
  display: grid;
  grid-template-areas: 'header .' 'results filters';
  grid-template-columns: auto 173px;
  margin: 32px 108px 64px 32px;
  max-width: 1150px;
  row-gap: 32px;
}

@media only screen and (max-width: 1440px) {
  .emotion-0 {
    margin: 32px 40px 64px 40px;
  }
}

@media only screen and (max-width: 767px) {
  .emotion-0 {
    -webkit-column-gap: 0;
    column-gap: 0;
    grid-template-areas: 'header' 'results';
    grid-template-columns: auto;
    margin: 32px 24px 64px 24px;
  }
}

.emotion-2 {
  grid-area: header;
}

.emotion-4 {
  color: #001E2B!important;
  font-size: 18px;
  line-height: 21px;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  letter-spacing: 0.8px;
}

.emotion-6 {
  display: none;
  margin-top: 16px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    display: block;
  }
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8[disabled],
.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover,
.emotion-8:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-8:focus {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-9 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-10 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  padding: 0 11px;
  gap: 6px;
}

.emotion-11 {
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-12 {
  box-shadow: none;
  display: grid;
  grid-area: results;
  grid-auto-rows: calc(152px + 16px);
  height: 100%;
  width: 100%;
}

.emotion-12:hover>.e1yoi6mj7 {
  opacity: 0.2;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-12:hover>.e1yoi6mj7:hover {
  opacity: 1;
}

.emotion-12:not(:hover)>.e1yoi6mj7 {
  opacity: 1;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-14 {
  box-shadow: 0 0 4px 0 rgba(231, 238, 236, 0.4);
  background-color: #fff;
  height: 152px;
  position: relative;
  place-self: center;
  width: 100%;
  box-shadow: 0 0 4px 0 rgba(231, 238, 236, 1)!important;
  color: red;
  box-sizing: border-box;
  padding: 15px;
  display: grid;
  grid-template-rows: 1fr 2fr 1fr;
}

.emotion-14>div {
  padding: 24px;
}

.emotion-14:hover,
.emotion-14:focus {
  color: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

.emotion-14:hover>div,
.emotion-14:focus>div {
  background-color: unset!important;
}

.emotion-14:before {
  content: '';
  position: absolute;
  top: calc(-16px / 2);
  left: 0;
  right: 0;
  bottom: calc(-16px / 2);
  background-color: transparent;
}

.emotion-14 * {
  padding: 2px;
  height: 15px!important;
  margin-right: 10px!important;
}

.emotion-34 {
  grid-area: filters;
}

@media only screen and (max-width: 767px) {
  .emotion-34 {
    display: none;
  }
}

.emotion-36 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3D4F58;
  font-size: 12px;
  line-height: 15px;
  text-transform: uppercase;
  white-space: nowrap;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  margin-bottom: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h1
        class="emotion-4 emotion-5"
      >
        Search results for "noresultsreturned"
      </h1>
      <div
        class="emotion-6 emotion-7"
      >
        <button
          aria-disabled="false"
          class="emotion-8"
          data-leafygreen-ui="button"
          type="button"
        >
          <div
            class="emotion-9"
          />
          <div
            class="emotion-10"
          >
            <svg
              alt=""
              aria-hidden="true"
              class="emotion-11"
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m6 6.148-3.8-3.94C1.797 1.79 2.044 1 2.576 1h10.848c.532 0 .779.79.377 1.208L10 6.148v5.625a.5.5 0 0 1-.17.376l-3 2.625a.5.5 0 0 1-.83-.376v-8.25Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            Specify your search
          </div>
        </button>
      </div>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      class="emotion-34 emotion-35"
    >
      <h2
        class="emotion-36 emotion-37"
      >
        Specify your search
      </h2>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 200px; border-radius: 12px;"
        >
          ‌
        </span>
        <br />
        <span
          class="react-loading-skeleton"
          style="width: 200px; border-radius: 12px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search Results Page renders loading images before returning nonempty results 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-column-gap: 46px;
  column-gap: 46px;
  display: grid;
  grid-template-areas: 'header .' 'results filters';
  grid-template-columns: auto 173px;
  margin: 32px 108px 64px 32px;
  max-width: 1150px;
  row-gap: 32px;
}

@media only screen and (max-width: 1440px) {
  .emotion-0 {
    margin: 32px 40px 64px 40px;
  }
}

@media only screen and (max-width: 767px) {
  .emotion-0 {
    -webkit-column-gap: 0;
    column-gap: 0;
    grid-template-areas: 'header' 'results';
    grid-template-columns: auto;
    margin: 32px 24px 64px 24px;
  }
}

.emotion-2 {
  grid-area: header;
}

.emotion-4 {
  color: #001E2B!important;
  font-size: 18px;
  line-height: 21px;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  letter-spacing: 0.8px;
}

.emotion-6 {
  display: none;
  margin-top: 16px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    display: block;
  }
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8[disabled],
.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover,
.emotion-8:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-8:focus {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-9 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-10 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  padding: 0 11px;
  gap: 6px;
}

.emotion-11 {
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-12 {
  box-shadow: none;
  display: grid;
  grid-area: results;
  grid-auto-rows: calc(152px + 16px);
  height: 100%;
  width: 100%;
}

.emotion-12:hover>.e1yoi6mj7 {
  opacity: 0.2;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-12:hover>.e1yoi6mj7:hover {
  opacity: 1;
}

.emotion-12:not(:hover)>.e1yoi6mj7 {
  opacity: 1;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-14 {
  box-shadow: 0 0 4px 0 rgba(231, 238, 236, 0.4);
  background-color: #fff;
  height: 152px;
  position: relative;
  place-self: center;
  width: 100%;
  box-shadow: 0 0 4px 0 rgba(231, 238, 236, 1)!important;
  color: red;
  box-sizing: border-box;
  padding: 15px;
  display: grid;
  grid-template-rows: 1fr 2fr 1fr;
}

.emotion-14>div {
  padding: 24px;
}

.emotion-14:hover,
.emotion-14:focus {
  color: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

.emotion-14:hover>div,
.emotion-14:focus>div {
  background-color: unset!important;
}

.emotion-14:before {
  content: '';
  position: absolute;
  top: calc(-16px / 2);
  left: 0;
  right: 0;
  bottom: calc(-16px / 2);
  background-color: transparent;
}

.emotion-14 * {
  padding: 2px;
  height: 15px!important;
  margin-right: 10px!important;
}

.emotion-34 {
  grid-area: filters;
}

@media only screen and (max-width: 767px) {
  .emotion-34 {
    display: none;
  }
}

.emotion-36 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3D4F58;
  font-size: 12px;
  line-height: 15px;
  text-transform: uppercase;
  white-space: nowrap;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  margin-bottom: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h1
        class="emotion-4 emotion-5"
      >
        Search results for "stitch"
      </h1>
      <div
        class="emotion-6 emotion-7"
      >
        <button
          aria-disabled="false"
          class="emotion-8"
          data-leafygreen-ui="button"
          type="button"
        >
          <div
            class="emotion-9"
          />
          <div
            class="emotion-10"
          >
            <svg
              alt=""
              aria-hidden="true"
              class="emotion-11"
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m6 6.148-3.8-3.94C1.797 1.79 2.044 1 2.576 1h10.848c.532 0 .779.79.377 1.208L10 6.148v5.625a.5.5 0 0 1-.17.376l-3 2.625a.5.5 0 0 1-.83-.376v-8.25Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            Specify your search
          </div>
        </button>
      </div>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="emotion-14 emotion-15"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 200px; border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="border-radius: 12px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
          <span
            class="react-loading-skeleton"
            style="width: 60px; border-radius: 12px;"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      class="emotion-34 emotion-35"
    >
      <h2
        class="emotion-36 emotion-37"
      >
        Specify your search
      </h2>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 200px; border-radius: 12px;"
        >
          ‌
        </span>
        <br />
        <span
          class="react-loading-skeleton"
          style="width: 200px; border-radius: 12px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search Results Page renders results from a given search term query param and displays category and version tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-column-gap: 46px;
  column-gap: 46px;
  display: grid;
  grid-template-areas: 'header .' 'results filters';
  grid-template-columns: auto 173px;
  margin: 32px 108px 64px 32px;
  max-width: 1150px;
  row-gap: 32px;
}

@media only screen and (max-width: 1440px) {
  .emotion-0 {
    margin: 32px 40px 64px 40px;
  }
}

@media only screen and (max-width: 767px) {
  .emotion-0 {
    -webkit-column-gap: 0;
    column-gap: 0;
    grid-template-areas: 'header' 'results';
    grid-template-columns: auto;
    margin: 32px 24px 64px 24px;
  }
}

.emotion-2 {
  grid-area: header;
}

.emotion-4 {
  color: #001E2B!important;
  font-size: 18px;
  line-height: 21px;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  letter-spacing: 0.8px;
}

.emotion-6 {
  display: none;
  margin-top: 16px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    display: block;
  }
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8[disabled],
.emotion-8:disabled {
  pointer-events: none;
}

.emotion-8:active,
.emotion-8:focus,
.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover,
.emotion-8:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-8:focus {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-9 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-10 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  pointer-events: none;
  position: relative;
  z-index: 0;
  padding: 0 11px;
  gap: 6px;
}

.emotion-11 {
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-12 {
  box-shadow: none;
  display: grid;
  grid-area: results;
  grid-auto-rows: calc(152px + 16px);
  height: 100%;
  width: 100%;
}

.emotion-12:hover>.emotion-14 {
  opacity: 0.2;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-12:hover>.emotion-14:hover {
  opacity: 1;
}

.emotion-12:not(:hover)>.emotion-14 {
  opacity: 1;
  -webkit-transition: opacity 150ms ease-in;
  transition: opacity 150ms ease-in;
}

.emotion-15 {
  color: #494747;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 24px;
  box-shadow: 0 0 4px 0 rgba(231, 238, 236, 0.4);
  background-color: #fff;
  height: 152px;
  position: relative;
  place-self: center;
  width: 100%;
}

.emotion-15:hover,
.emotion-15:focus {
  color: #494747;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:hover .emotion-18,
.emotion-15:focus .emotion-18 {
  background-color: rgba(231, 238, 236, 0.4);
  -webkit-transition: background-color 150ms ease-in;
  transition: background-color 150ms ease-in;
}

.emotion-15>div {
  padding: 24px;
}

.emotion-15:hover,
.emotion-15:focus {
  color: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

.emotion-15:hover>div,
.emotion-15:focus>div {
  background-color: unset!important;
}

.emotion-15:before {
  content: '';
  position: absolute;
  top: calc(-16px / 2);
  left: 0;
  right: 0;
  bottom: calc(-16px / 2);
  background-color: transparent;
}

.emotion-17 {
  height: 100%;
}

.emotion-19 {
  font-family: 'Euclid Circular A';
  font-size: 13px;
  line-height: 24px;
  letter-spacing: 0.5px;
  height: 24px;
  margin-bottom: 8px;
  margin-top: 0;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  position: relative;
}

@media only screen and (max-width: 480px) {
  .emotion-19 {
    font-size: 16px;
    line-height: 24px;
    font-weight: 600;
  }
}

.emotion-21 {
  font-size: 13px;
  line-height: 20px;
  margin-bottom: 16px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  min-height: 20px;
}

.emotion-23 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
}

.emotion-23 strong,
.emotion-23 b {
  font-weight: 700;
}

.emotion-24 {
  bottom: 0;
  margin-bottom: 24px;
}

.emotion-27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 8px;
  background-color: #E3FCF7;
  border: 1px solid #C0FAE6;
  color: #00684A;
  cursor: pointer;
  height: 26px;
  font-size: 13px;
  margin-right: 8px;
}

.emotion-29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 8px;
  background-color: #E1F7FF;
  border: 1px solid #C3E7FE;
  color: #1254B7;
  cursor: pointer;
  height: 26px;
  font-size: 13px;
  margin-right: 8px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-30>div:first-child {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-30>div:last-child {
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-31 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-36 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #889397;
}

.emotion-36:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-36:active:before,
.emotion-36:hover:before,
.emotion-36:focus:before {
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-36:focus {
  outline: none;
}

.emotion-36:active,
.emotion-36:hover {
  color: #001E2B;
}

.emotion-36:active:before,
.emotion-36:hover:before {
  background-color: #E8EDEB;
}

.emotion-36:focus-visible {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-36:focus-visible:before {
  background-color: #E8EDEB;
}

.emotion-37 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-38 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-42 {
  grid-area: filters;
}

@media only screen and (max-width: 767px) {
  .emotion-42 {
    display: none;
  }
}

.emotion-44 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3D4F58;
  font-size: 12px;
  line-height: 15px;
  text-transform: uppercase;
  white-space: nowrap;
  font-family: 'Euclid Circular A';
  font-weight: bolder;
  letter-spacing: 0.5px;
  margin: 0;
  margin-bottom: 16px;
}

.emotion-46 {
  grid-area: filters;
}

@media only screen and (max-width: 767px) {
  .emotion-46 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .emotion-46>div {
    margin-bottom: 0;
    margin-right: 8px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-46 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .emotion-46>div {
    width: 100%;
  }

  .emotion-46>div:first-of-type {
    margin-bottom: 8px;
    margin-right: 0;
  }

  .emotion-46>div>div {
    width: 100%;
  }
}

.emotion-48 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 16px;
}

.emotion-50 {
  width: 175px;
}

.emotion-52 {
  position: relative;
}

@media only screen and (max-width: 1024px) {
  .emotion-52 label,
  .emotion-52 p,
  .emotion-52 button,
  .emotion-52 div,
  .emotion-52 span {
    font-size: 13px;
  }
}

.emotion-53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-53>label+button,
.emotion-53>p+button {
  margin-top: 3px;
}

@media only screen and (max-width: 1024px) {
  .emotion-53 label,
  .emotion-53 p,
  .emotion-53 button,
  .emotion-53 div,
  .emotion-53 span {
    font-size: 13px;
  }
}

.emotion-54 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  color: #5C6C75;
  width: 100%;
  font-size: 13px;
}

.emotion-54:focus {
  outline: none;
}

.emotion-54[disabled],
.emotion-54:disabled {
  pointer-events: none;
}

.emotion-54:active,
.emotion-54:focus,
.emotion-54:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-54:hover,
.emotion-54:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-54:focus {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-54>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-54>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-54>*:last-child>svg {
  color: #3D4F58;
}

.emotion-54>*:last-child {
  padding: 0 4px 0 12px;
}

.emotion-54:focus {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

@media only screen and (max-width: 1024px) {
  .emotion-54 {
    height: 36px;
    font-size: 16px;
  }
}

.emotion-57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 4px;
  overflow: hidden;
}

.emotion-58 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
}

.emotion-59 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: left;
}

.emotion-66 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  font-weight: 400;
  background-color: #FFFFFF;
  color: #5C6C75;
  width: 100%;
  font-size: 13px;
}

.emotion-66:focus {
  outline: none;
}

.emotion-66[disabled],
.emotion-66:disabled {
  pointer-events: none;
}

.emotion-66:active,
.emotion-66:focus,
.emotion-66:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-66:hover,
.emotion-66:active {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-66,
.emotion-66:hover {
  background-color: #E8EDEB;
  border-color: #C1C7C6;
  color: #889397;
  cursor: not-allowed;
}

.emotion-66:focus {
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-66>*:last-child {
  grid-template-columns: 1fr 16px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-66>*:last-child>svg {
  justify-self: right;
  width: 16px;
  height: 16px;
}

.emotion-66>*:last-child>svg {
  color: #3D4F58;
}

.emotion-66>*:last-child {
  padding: 0 4px 0 12px;
}

.emotion-66:focus {
  box-shadow: 0 0 0 3px #0498EC;
  border-color: rgba(255, 255, 255, 0);
}

.emotion-66:disabled {
  cursor: not-allowed;
  pointer-events: unset;
  box-shadow: unset;
}

.emotion-66:disabled:active {
  pointer-events: none;
}

.emotion-66:disabled {
  background-color: #E8EDEB;
  color: #889397;
}

.emotion-66:disabled>*:last-child>svg {
  color: #889397;
}

@media only screen and (max-width: 1024px) {
  .emotion-66 {
    height: 36px;
    font-size: 16px;
  }
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <h1
        class="emotion-4 emotion-5"
      >
        Search results for "stitch"
      </h1>
      <div
        class="emotion-6 emotion-7"
      >
        <button
          aria-disabled="false"
          class="emotion-8"
          data-leafygreen-ui="button"
          type="button"
        >
          <div
            class="emotion-9"
          />
          <div
            class="emotion-10"
          >
            <svg
              alt=""
              aria-hidden="true"
              class="emotion-11"
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m6 6.148-3.8-3.94C1.797 1.79 2.044 1 2.576 1h10.848c.532 0 .779.79.377 1.208L10 6.148v5.625a.5.5 0 0 1-.17.376l-3 2.625a.5.5 0 0 1-.83-.376v-8.25Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            Specify your search
          </div>
        </button>
      </div>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      <a
        class="emotion-14 emotion-15 emotion-16"
        href="stitch.nofilters"
      >
        <div
          class="emotion-17 emotion-18"
        >
          <p
            class="emotion-19 emotion-20"
          >
            <span
              style="background-color:#FFEC9E"
            >
              stitch
            </span>
             (no filters)
          </p>
          <p
            class="emotion-21 emotion-22 emotion-23"
            maxlines="2"
          >
            <span
              style="background-color:#FFEC9E"
            >
              Stitch
            </span>
             preview (no filters)
          </p>
          <div
            class="emotion-24 emotion-25"
          >
            <span
              class="emotion-26 emotion-27"
            >
              Realm
            </span>
            <span
              class="emotion-26 emotion-29"
            >
              Latest
            </span>
          </div>
        </div>
      </a>
      <div
        class="emotion-30"
      >
        <div
          class="emotion-31"
        />
        <div
          class="emotion-31"
        >
          <p
            class="emotion-23"
            data-testid="lg-pagination-item-range"
          >
            NaN - NaN of many
          </p>
        </div>
        <div
          class="emotion-31"
        >
          <p
            class="emotion-23"
            data-testid="lg-pagination-page-range"
          >
            NaN of many
          </p>
          <button
            aria-disabled="false"
            aria-label="Previous page"
            class="emotion-36"
            data-testid="lg-pagination-back-button"
            tabindex="0"
          >
            <div
              class="emotion-37"
            >
              <svg
                aria-label="Chevron Left Icon"
                class="emotion-38"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.7782 1.63604C10.3877 1.24551 9.75449 1.24551 9.36396 1.63604L4.41421 6.58579L3.70711 7.29289C3.31658 7.68342 3.31658 8.31658 3.70711 8.70711L4.41421 9.41421L9.36396 14.364C9.75448 14.7545 10.3876 14.7545 10.7782 14.364L11.4853 13.6569C11.8758 13.2663 11.8758 12.6332 11.4853 12.2426L7.24264 8L11.4853 3.75736C11.8758 3.36684 11.8758 2.73367 11.4853 2.34315L10.7782 1.63604Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-label="Next page"
            class="emotion-36"
            data-testid="lg-pagination-next-button"
            tabindex="0"
          >
            <div
              class="emotion-37"
            >
              <svg
                aria-label="Chevron Right Icon"
                class="emotion-38"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.36396 14.364C5.75449 14.7545 6.38765 14.7545 6.77818 14.364L11.7279 9.41421L12.435 8.70711C12.8256 8.31658 12.8256 7.68342 12.435 7.29289L11.7279 6.58579L6.77817 1.63604C6.38765 1.24552 5.75449 1.24551 5.36396 1.63604L4.65685 2.34315C4.26633 2.73367 4.26633 3.36684 4.65685 3.75736L8.89949 8L4.65685 12.2426C4.26633 12.6332 4.26633 13.2663 4.65686 13.6569L5.36396 14.364Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
       
    </div>
    <div
      class="emotion-42 emotion-43"
    >
      <h2
        class="emotion-44 emotion-45"
      >
        Specify your search
      </h2>
      <div
        class="emotion-46 emotion-47"
      >
        <div
          class="emotion-48 emotion-49"
        >
          <div
            class="emotion-50 emotion-51 emotion-52"
          >
            <div
              class="emotion-53"
            >
              <button
                aria-controls="select-17-menu"
                aria-describedby="select-17-description"
                aria-disabled="false"
                aria-expanded="false"
                aria-invalid="false"
                aria-labelledby="select"
                class="emotion-54"
                data-leafygreen-ui="button"
                data-testid="lg-select"
                id="select-18"
                type="button"
                value=""
              >
                <div
                  class="emotion-9"
                />
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-57"
                  >
                    <div
                      class="emotion-58"
                    >
                      Filter by Category
                    </div>
                  </div>
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-59"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="emotion-48 emotion-49"
        >
          <div
            class="emotion-50 emotion-51 emotion-52"
          >
            <div
              class="emotion-53"
            >
              <button
                aria-controls="select-19-menu"
                aria-describedby="select-19-description"
                aria-disabled="true"
                aria-expanded="false"
                aria-invalid="false"
                aria-labelledby="select"
                class="emotion-66"
                data-leafygreen-ui="button"
                data-testid="lg-select"
                disabled=""
                id="select-20"
                type="button"
                value=""
              >
                <div
                  class="emotion-9"
                />
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-57"
                  >
                    <div
                      class="emotion-58"
                    >
                      Filter by Version
                    </div>
                  </div>
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-59"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="emotion-8"
          data-leafygreen-ui="button"
          type="button"
        >
          <div
            class="emotion-9"
          />
          <div
            class="emotion-10"
          >
            <svg
              alt=""
              aria-hidden="true"
              class="emotion-11"
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.203 3.404a1 1 0 0 0-1.414 0L8.314 5.879 5.839 3.404a1 1 0 0 0-1.414 0l-.707.707a1 1 0 0 0 0 1.414L6.192 8l-2.474 2.475a1 1 0 0 0 0 1.414l.707.707a1 1 0 0 0 1.414 0l2.475-2.475 2.475 2.475a1 1 0 0 0 1.414 0l.707-.707a1 1 0 0 0 0-1.414L10.435 8l2.475-2.475a1 1 0 0 0 0-1.414l-.707-.707Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            Clear all filters
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
